# nightlights-econ

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: data_sources.md  methodology.md
examples/: 01_single_city.py  02_compare_cities.py  03_india_top_cities.py  04_international.py  05_custom_boundary.py  backfill_cache.py  generate_report.py  generate_rural_report.py  run_bhubaneswar_kolkata_hyderabad.py  run_extended_2004_2026.py  run_india_all_states.py  run_karnataka_cities.py  run_real_gee.py  run_rural_analysis.py  run_tamilnadu_cities.py  run_up_cities.py
src/nightlights_econ/: __init__.py  analysis.py  cache.py  cli.py  cloud_correction.py  core.py  dmsp.py  engine.py  extractor.py  gdp_proxy.py  india_census.py  lighting_tech.py  plotting.py  population.py  ppp.py  rankings.py  utils.py
src/nightlights_econ/data/: country_codes.py  india_districts.py
tests/: conftest.py  test_analysis.py  test_cache.py  test_cloud_correction.py  test_gdp_proxy.py  test_lighting_tech.py  test_plotting.py
