[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nightlights-econ"
version = "0.1.0"
description = "Measure real economic growth for any city using NASA satellite nighttime lights. GDP/capita, PPP-adjusted, population-normalized."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "nightlights-econ contributors" }
]
keywords = ["nighttime-lights", "VIIRS", "GDP", "satellite", "economics", "remote-sensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "earthengine-api>=0.1.380",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "click>=8.1",
    "requests>=2.28",
    "geopandas>=0.13",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
nightlights = "nightlights_econ.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/nightlights_econ"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
